--- a/_posts/2024-06-05-triassic.md
+++ b/_posts/2024-06-05-triassic.md
@@ -40,7 +40,7 @@ Since all flying vertebrates today use their forelimbs as wings, it seems counte
 ### Tanystropheids
 ![tanystropheids](/assets/images/posts/tanystropheids.png)
 
-*Raibilania, Tanystropheus*, and *Tanytrachelos*
+*Raibliania, Tanystropheus*, and *Tanytrachelos*
 
 Another basal archosaur group, the tanystropheids were like living fishing poles, with long, stiff, lightweight necks they probably used for catching fish while standing on the shore. While *Tanytrachelos* was less than a foot long (20 cm), some specimens of *Tanystropheus* would have been a couple feet tall, but twenty feet long (6 m)! Some paleontologists theorize that they would have caught prey while swimming, so I've depicted both styles here.
 
@@ -175,7 +175,7 @@ Here are some families for which only one representative is known from this time
 
 The further back in time you go, the more fragmentary the fossil remains become. There are many animals I've depicted that can't be confidently assigned to a particular family, and I just chose one and ran with it in their depictions.
 
-**Crocs of some kind:** *Dasygnathoides, *Trialestes*, and *Dromicosuchus* can't be assigned to any particular croc family. *Cuyosuchus* might be a small, late-surviving erythrosuchid, a lineage of early reptiles with small bodies and gigantic predatory heads, but it can't be confidently assigned to any family.
+**Crocs of some kind:** *Dasygnathoides, Trialestes*, and *Dromicosuchus* can't be assigned to any particular croc family. *Cuyosuchus* might be a small, late-surviving erythrosuchid, a lineage of early reptiles with small bodies and gigantic predatory heads, but it can't be confidently assigned to any family.
 
 **Basal archosaurs:** *Mambachiton*, *Mecistotrachelos* (another one with gliding adaptations, but using rib-wings like modern *Draco* lizards), *Incertovenator*
 
