fixing duplicate video

--- a/_posts/2024-07-03-scales.md
+++ b/_posts/2024-07-03-scales.md
@@ -88,7 +88,7 @@ Why does the standard minor scale include a major second instead of a minor seco
 
 If you play all the white keys starting and ending on D, you get Dorian mode, or minor with a raised sixth tone. This one isn't super common--it's a single half-step away from *melodic minor* (covered later) but it's missing the leading tone, which is kind of an important feature.
 
-{% include youtubePlayer.html id="\agmd71ec5qw" %}
+{% include youtubePlayer.html id="\7NfWCObXoeA" %}
 
 #### Phrygian
 
