royal tyrrell part 1

--- a/_posts/2021-07-28-beauty.md
+++ b/_posts/2021-07-28-beauty.md
@@ -37,7 +37,7 @@ How do we detect sexually selected characteristics in the fossil record? The thr
 
 {% include image-caption.html imageurl="/assets/images/posts/darwinopterus.png" title="Darwinopterus" caption="A male and female Darwinopterus, an example of pronounced sexual dimorphism. We know which is which because we have a remarkable crestless specimen preserved with an egg in its pelvic region." %}
 
-**Positive allometry** means that as an animal gets bigger, the trait in question gets proportionally even bigger, such as the huge antlers of the extinct Irish elk.  In other words, a larger adult male specimen would be expected to have even larger antlers than you'd get by linearly scaling up a smaller adult male.  **Ontogeny** is the way an organism grows up; *changes in growth rate during ontogeny* means that a trait may stay small or nonexistant until puberty, at which point it grows rapidly, since it is only then needed for sexual display.  Examples of this include the development of peacock tails, deer antlers, fiddler crab claws, pterosaur crests, hadrosaur crests, and ceratopsian horns and frills.  While none of these three indicators is exclusive in itself to sexually selected traits (for example, anglerfish are extremely sexually dimorphic, with the males hundreds of times smaller than the females, but this is due to some other reason than sexual display by the females), if all three are present in a fossil species it's highly likely that the trait in question is for sexual display.
+**Positive allometry** means that as an animal gets bigger, the trait in question gets proportionally even bigger, such as the huge antlers of the extinct Irish elk.  In other words, a larger adult male specimen would be expected to have even larger antlers than you'd get by linearly scaling up a smaller adult male.  **Ontogeny** is the way an organism grows up; *changes in growth rate during ontogeny* means that a trait may stay small or nonexistent until puberty, at which point it grows rapidly, since it is only then needed for sexual display.  Examples of this include the development of peacock tails, deer antlers, fiddler crab claws, pterosaur crests, hadrosaur crests, and ceratopsian horns and frills.  While none of these three indicators is exclusive in itself to sexually selected traits (for example, anglerfish are extremely sexually dimorphic, with the males hundreds of times smaller than the females, but this is due to some other reason than sexual display by the females), if all three are present in a fossil species it's highly likely that the trait in question is for sexual display.
 
 The earliest probable example of a trait like this is the brush fin on the Devonian chimera-relative, *Stethacanthus*.  Again, this is a case where the male and female were originally thought to be different species (the female was named *Symmorium*) before getting lumped back into one.
 
