--- a/_posts/2022-08-24-lillis2.md
+++ b/_posts/2022-08-24-lillis2.md
@@ -36,7 +36,7 @@ The page image up top is of two early Late Triassic synapsids, the large, herbiv
 
 ### The smallest arthropods
 
-Did you know that the smallest eukaryotic cell is tens of thousands of times smaller than the largest? The smallest insects, a family egg-parasite wasps known as fairyflies, are smaller than an average *Paramecium*; the former is made of tens of thousands of cells, while the latter is a single cell. Due to the huge difference in scale, these cells function very differently, and fairyflies and other microscopic arthropods (the group including crustaceans, arachnids, insects, and other hard-exoskeletoned, jointed-legged creatures) have had to make a lot of sacrifices in order to get so tiny.
+Did you know that the smallest eukaryotic cell is tens of thousands of times smaller than the largest? The smallest insects, a family of egg-parasite wasps known as fairyflies, are smaller than an average *Paramecium*; the former is made of tens of thousands of cells, while the latter is a single cell. Due to the huge difference in scale, these cells function very differently, and fairyflies and other microscopic arthropods (the group including crustaceans, arachnids, insects, and other hard-exoskeletoned, jointed-legged creatures) have had to make a lot of sacrifices in order to get so tiny.
 
 Many of the smallest organisms are parasites, including all viruses, the smallest bacteria, and the smallest insects. Why? Because to parasitize a host, it helps to be smaller than that host--and as hosts shrink for the same reasons as the aforementioned pumpkin toadlets, parasites have to also miniaturize in order to take advantage of those resources. Someone's gotta do it! Furthermore, due to the parasitic lifestyle, a lot of things that would normally be constraints don't come into play, allowing the parasite to jettison certain functions. For one, animals operating at the very lowest possible size limit have to have eggs and/or young that are still smaller. The smallest arthropods all only create and lay one enormous egg at a time: the females of the non-parasitic mite genus *Brachychthonius* are 180 microns (µm) long, and they lay 100µm eggs! But in parasites and parasitoids (parasites whose actions result in the death of the host, a lifestyle intermediate between parasitism and predation, like wasps who lay eggs inside caterpillars), it's much easier for the young to find food, since they are surrounded by it, so they don't need to be as anatomically or behaviorally capable as the young of non-parasites.  Fairyflies take this to its logical conclusion and inject their eggs into other eggs, which allows their egg to be extremely small and simple--basically just the embryo, with no in-egg nutrition.
 
