--- a/_posts/2024-09-22-tyrrell2.md
+++ b/_posts/2024-09-22-tyrrell2.md
@@ -148,7 +148,7 @@ Also somewhat unfortunately, this garden was very much not Cretaceous. I'm no bo
 
 Leaving the hall of *Shonisaurus*, we enter the main **HALL OF DINOSAURS**! The first thing you see is the one and only sauropod in the museum, *Camarasaurus*.
 
-![camara](/assets/images/posts/camara-hips.jpeg)
+![camara](/assets/images/posts/camara-hips.jpg)
 
 Similarly to the [Black Beauty *Tyrannosaurus*](https://obscuredinosaurfacts.com/blog/post/2024/09/04/tyrrell.html), some of this specimen's bones were too heavy to mount, but the museum lets you look at them anyway. Nice!
 
