--- a/_posts/2024-10-02-color.md
+++ b/_posts/2024-10-02-color.md
@@ -25,7 +25,7 @@ Key doesn't necessarily have to be black; it refers to the darkest color in the 
 
 This is by amazing paleoartist Greer Stothers, which I have a print of hanging in my guest bathroom.
 
-There are three physical phenomena at play here: the way different combined wavelengths of light are percieved, the way pigments absorb certain light wavelengths, and the fact that the cone cells in our eyes are tuned to pick up certain wavelengths and not others.
+There are three physical phenomena at play here: the way different combined wavelengths of light are perceived, the way pigments absorb certain light wavelengths, and the fact that the cone cells in our eyes are tuned to pick up certain wavelengths and not others.
 
 ### Spectra
 
@@ -37,7 +37,7 @@ Electromagnetic radiation is light, but it's also radio, microwaves, ultraviolet
 
 Notice that some colors are missing from the spectrum. There's no pink, brown, white, gray, or black on there. That's because these colors are how we perceive combinations of wavelengths in varying proportions.
 
-The sun emits all visible wavelengths roughly evenly (though there's a slight dropoff toward the blue end and subtle differences between morning, midday, and evening light due to the way the atmosphere attenuates radiation). We percieve this "full spectrum" light as being white. Subsets of the spectrum, taken together, produce other colors.
+The sun emits all visible wavelengths roughly evenly (though there's a slight dropoff toward the blue end and subtle differences between morning, midday, and evening light due to the way the atmosphere attenuates radiation). We perceive this "full spectrum" light as being white. Subsets of the spectrum, taken together, produce other colors.
 
 #### Aside: Why is the sky blue?
 You'll often hear people say that "the sky scatters blue light". But that doesn't mean anything; it's just [guessing the teacher's password](https://www.lesswrong.com/posts/NMoLJuDJEms7Ku9XS/guessing-the-teacher-s-password). It doesn't tell you *why blue* rather than green or pink, and it doesn't allow you to make any further predictions, like what color you'd expect the evening sky to be when the sunlight passes through the most atmosphere before it reaches your eye.
@@ -84,7 +84,7 @@ The **ancestral condition** is actually having *four* cone cells. Birds, reptile
 
 During the Mesozoic (age of reptiles), mammals were mostly nocturnal or burrowing, so we lost two of our cone types. It was only after the non-avian dinosaurs went extinct at the end of the Mesozoic that primates regained trichromacy by modifying one of the remaining two cones. This arose in the Paleogene period, the very first time period of the Cenozoic, so it seems like it was a direct result of no longer being under the thumb of the ruling reptiles. This is why the page image is a colorful proto-mammal: it's possible that Paleozoic synapsids like this *Rubidgea* would have been much more colorful than we think of mammals as being today, because they would have seen the world in four colors.
 
-The wavelength sensitivities of our three types of cone cells is the basis for the **RGB Color Model**. A spectrogram with a spike at each location, red, green and blue, is percieved by humans as being white. And since these are actually the only colors humans can percieve, different groupings and proportions of these three colors can be combined to make any color humans are capable of seeing. This is how TVs work: at each pixel location there's a tiny red, blue, and green sub-pixel, which can independently light up. If the pixel needs to display blue, only the blue one would be lit; if it needs to display pink, the red and blue would be lit together, and if it needs to display white, all three would be lit at the same time.
+The wavelength sensitivities of our three types of cone cells is the basis for the **RGB Color Model**. A spectrogram with a spike at each location, red, green and blue, is perceived by humans as being white. And since these are actually the only colors humans can perceive, different groupings and proportions of these three colors can be combined to make any color humans are capable of seeing. This is how TVs work: at each pixel location there's a tiny red, blue, and green sub-pixel, which can independently light up. If the pixel needs to display blue, only the blue one would be lit; if it needs to display pink, the red and blue would be lit together, and if it needs to display white, all three would be lit at the same time.
 
 ![rgb](/assets/images/posts/rgb.png)
 
@@ -120,7 +120,7 @@ If a red cone cell *absorbs* only red, you'd expect it to *appear* cyan, as it r
 
 In summary, CMYK and RGB are systems that are human-specific. A different animal with different cone cells would need to use different color models in their screens and paints to achieve what appears to be full-spectrum to them.
 
-So back to the original question--where did the RBY color model come from? Well, seventeenth-century scientists and artists had no idea how eyes worked. They just experimented with mixing paints, and ended up with a model that *mostly* worked. Red and blue are more common colors in nature, after all, than cyan and magenta. Blood is red, the sky and water are blue; it's hard to come up with examples of anything that's naturally cyan or magenta. So it makes sense that people would want to believe that red and blue have some property of "primariness".
+So back to the original question--where did the RBY color model come from? Well, seventeenth-century scientists and artists had no idea how eyes worked. They just experimented with mixing paints, and ended up with a model that *mostly* worked. Red and blue are more common colors in nature, after all, than cyan and magenta. Blood is red, the sky and water are blue; it's hard to come up with examples of anything that's naturally cyan or magenta. So it makes sense that people would want to believe that red and blue have some property of "primariness". And since red and blue are *close enough* to magenta and cyan, the RBY color model ended up being a workable approximation of the real thing.
 
 For further details, here's a very in-depth [Veritasium episode](https://www.youtube.com/watch?v=nfAqTSjMBJk) about color vision, including some very cute footage of jumping spiders!
 
