--- a/_posts/2024-12-26-cavemen.md
+++ b/_posts/2024-12-26-cavemen.md
@@ -5,7 +5,7 @@ tags: [Humans, Miscellaneous]
 date:   2024-12-26 00:11:11 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/neanderthal.jpg
+featured_image: /assets/images/posts/neanderthal.png
 featured: true
 hidden: true
 ---
