--- a/_posts/2024-12-26-cavemen.md
+++ b/_posts/2024-12-26-cavemen.md
@@ -28,11 +28,13 @@ This was actually a really frustrating topic to research. There are tons of arti
 
 However, ***none*** of these sources cites a single primary source--they only circularly cite each other! As far as I was able to find, there is ***no*** evidence that pre-agricultural people removed their facial hair. The claim about clamshell tweezers was probably put forth as a tentative hypothesis about clamshells associated with other ancient human remains in some paper somewhere, and then this was picked up and repeated as if there was actually evidence for it. Furthermore, the "clean-shaven men in cave paintings" claim also has no evidence behind it that I could dig up. There are plenty of cave paintings that show human figures without beards, but this is probably artistic simplification rather than a realistic depiction. And finally, Indigenous cultures that live in snowy climates like the Inuit (North America) and the Sami (Northern Europe) do not tend to shave their beards to ward off frostbite, and there's no evidence that shaving even helps with this, since it can also have an insulative effect. (It's worth noting that both Indigenous groups don't tend to grow dense facial hair, so it's possible that the situation was different among other lineages.)
 
-Long story short, we don't know. The first concrete evidence for shaving comes from somewhere around 4000 years ago (2000 BCE), when bronze and copper straight razors are known from ancient Egypt. From then on, beards went in and out of style over the centuries, as they do now. All portraits, coinage, and busts of Alexander the Great (356-323 BCE) show him as clean-shaven, and he purportedly encouraged his soldiers to do the same to prevent their beards from being grabbed in combat.
+Long story short, we don't know. I think the most likely scenario is that cavemen would've hacked their hair and beards shorter with flint when they got unwieldy, but not shaved close to the skin a la *Ice Age*. This is what I tried to show in the page image at the top: an early-thirties friendly-looking Neanderthal with a short beard, suffering from male-pattern baldness. He probably wouldn't have looked so good from the back, as he would've had a tonsure-like ring of hair there.
+
+The first concrete evidence for shaving comes from somewhere around 4000 years ago (2000 BCE), when bronze and copper straight razors are known from ancient Egypt. From then on, beards went in and out of style over the centuries, as they do now. All portraits, coinage, and busts of Alexander the Great (356-323 BCE) show him as clean-shaven, and he purportedly encouraged his soldiers to do the same to prevent their beards from being grabbed in combat.
 
 How did people even use straight razors? They had to go to a barber. In Rome, rich people had live-in servants who would shave them daily, and the lower classes would visit public barbers less frequently. Imagine how many more barbers there would've had to have been compared to today, when people only get haircuts once a month or less!
 
-Other reasons than fashion would've compelled people to remove their hair. Which brings us to...
+There were other reasons besides fashion that would've compelled people to remove their hair. Which brings us to...
 
 ### Lice
 
