--- a/_posts/2025-01-26-sapiens.md
+++ b/_posts/2025-01-26-sapiens.md
@@ -51,7 +51,7 @@ First, he states that there was no technological progress between 150,000 and 70
 
 Next, he claims that Middle Paleolithic *Homo sapiens* would not have been able to learn the way a modern human can. There is no evidence for this. While there are error bars on the emergence of anatomically modern humans, they definitely existed by 150 kA, and since they were by definition *anatomically modern*, that means we don't believe there was some magical brain switch that hadn't been flipped yet that would enable them to think the way we do. There were small further anatomical changes that came with the advent of agriculture between 12 and 10 kA, such as 3-4% smaller brains and smaller jaws more susceptible to impacted wisdom teeth, but that's not what Harari is talking about here. He suggests that the "Tree of Knowledge mutation" occurred around 70 kA and revolutionized the way humanity operated. He also says that this is "the most commonly believed theory", which is also totally off-base. I don't know of any serious paleontologists who believe this. There are examples in the fossil record of rapid leaps forward, such as the emergence of neotenic chordates during the Cambrian explosion (larval sea squirts that refused to grow up, giving rise to the first fish), but the evidence simply doesn't support the theory in this case.
 
-The way humans are raised obviously plays a big part in what they are capable of later in life, so it's likely you wouldn't have been able to teach a caveman the theory of evolution because there are so many intermediate steps he would need to understand first. But if you took a *Homo sapiens* infant from 150,000 years ago and raised it in the modern world, it would almost certainly grow up indistinguishable from its peers. It might have a better chance of not having to have its wisdom teeth out, and it might be more vigilant and jumpy and less able to focus for long periods on delicate tasks, but those differences would be minor compared to the things that it would have in common with everyone else.
+The way humans are raised obviously plays a big part in what they are capable of later in life, so it's likely you wouldn't have been able to teach a caveman the theory of evolution because there are so many intermediate steps he would need to understand first. But if you took a *Homo sapiens* infant from 150,000 years ago and raised it in the modern world, it would almost certainly grow up indistinguishable from its peers. It might have a better chance of not having to have its wisdom teeth out, and it might be more vigilant and jumpy and less able to focus for long periods on delicate tasks or feel comfortable in crowds, but those differences would be minor compared to the things that it would have in common with everyone else.
 
 #### He's super down on Neanderthals.
 
@@ -61,7 +61,7 @@ Throughout the book, Harari makes claims that Neanderthals were incapable of cer
 
 This is again not true at all. Neanderthals are also known to have employed the tactic of driving herds into terrain where the hominids would have an advantage--and in fact, they *routinely* did this, while *Homo sapiens* more often simply out-marathoned their prey, chasing it until it could no longer move [4]. The claim that Neanderthals could only behave in "static patterns" is not based on anything; Neanderthals existed in Eurasia over a wide range of time and space, covering conditions from the tropical rainforests of Eemian Spain to the icy tundras of Ice Age Russia. Neanderthals who lived in different conditions *had* to be adaptable in order to persist there, and there's ample evidence that groups in different places gathered different plants and hunted different prey, depending on what was available.
 
-The more likely reasons that *Homo sapiens* ended up outcompeting the Neanderthals is not due to inherent superiority of one over the other, but rather due to the way their slight differences in biology influenced the way they lived. Neanderthals required many more calories to survive, potentially as many as 7500 per day for an adult male living in a cold climate. This meant that they required a larger range to support a smaller number of individuals. Since individuals were more sparsely distributed, this limited their ability to trade, communicate, and cooperate between family groups, slowing technological progress. This progress was further hindered by the fact that Neanderthals didn't benefit as much as *Homo sapiens* from projectile technology or things like needle and thread. Neanderthals delivered the killing blow to their prey by bracing a heavy spear against the ground and having other party members drive a large animal to impale itself on it. They were strong enough to take down mammoths and other giant animals in this way, while *Homo sapiens* would have been crushed if they'd tried the same. And since Neanderthals were larger and stockier, they ran hotter, and wouldn't have needed clothing to fit as snugly or layer as easily as *Homo sapiens*. Since they didn't need the tech, they didn't develop it. But while projectiles were superfluous for hunting mammoths, they would have been perfect for *Homo sapiens* to repurpose for slaughtering Neanderthals.
+The more likely reasons that *Homo sapiens* ended up outcompeting the Neanderthals is not due to inherent superiority of one over the other, but rather due to the way their slight differences in biology influenced the way they lived. Neanderthals required many more calories to survive, potentially as many as 7000 per day for an adult male living in a cold climate [2]. This meant that they required a larger range to support a smaller number of individuals. Since individuals were more sparsely distributed, this limited their ability to trade, communicate, and cooperate between family groups, slowing technological progress. This progress was further hindered by the fact that Neanderthals didn't benefit as much as *Homo sapiens* from projectile technology or things like needle and thread. Neanderthals delivered the killing blow to their prey by bracing a heavy spear against the ground and having other party members drive a large animal to impale itself on it. They were strong enough to take down mammoths and other giant animals in this way, while *Homo sapiens* would have been crushed if they'd tried the same. And since Neanderthals were larger and stockier, they ran hotter, and wouldn't have needed clothing to fit as snugly or layer as easily as *Homo sapiens*. Since they didn't need the tech, they didn't develop it. But while projectiles were superfluous for hunting mammoths, they would have been perfect for *Homo sapiens* to repurpose for slaughtering Neanderthals.
 
 In addition, due to Neanderthals' higher caloric requirements, they were simply never as numerous as *Homo sapiens*. That meant that even if *Homo sapiens* never killed Neanderthals and only interbred with them, the resulting hybrid species would be expected to come out looking mostly like *Homo sapiens*. The reality is that we did both kill them and interbreed with them, and now most people are somewhere in the range of 1-5% Neanderthal. But that's still a fairly large and detectable amount--you share only 3.1% of your genes with your great-great-great-grandparents--indicating that interbreeding was happening on the regular. If Neanderthals were considered human enough that first-generation hybrid children were allowed to go on and reproduce, they couldn't have seemed *that* alien to our long-ago ancestors.
 
