--- a/_posts/2024-05-01-anthro.md
+++ b/_posts/2024-05-01-anthro.md
@@ -47,7 +47,7 @@ The Way of the Seeded Earth describes cultures that don't have access to large p
 
 Joseph Campbell claims that since in the jungle, birth and death are all around, with lots of decomposing organic matter forming nurseries for new life, this is why tropical cultures are more likely to practice human sacrifice. They see that good new things come out of death, so to increase fertility of the land and their tribe, they sacrifice life. He also claims that the salience of birth in the jungle causes these cultures to worship mother deities and women's ability to make babies, leading to societies in which women hold more power.
 
-Whether Campbell has actually identified actually the cause or not, the observations he's trying to explain are true. Polyandry, or the practice of one woman simultaneously marrying multiple men, only occurs in the tropics (though wherever polyandry occurs, polygyny, or one-man-many-wives, also occurs), as do matrilineal societies, which track inheritance and transmission of power through the mother's line. There are no true matriarchal societies, since as I said above, there's no type of foraging humans do that women are strictly better at than men. But tropical societies tend to be much more gender-equal than temperate ones.
+Whether Campbell has actually identified the cause or not, the observations he's trying to explain are true. Polyandry, or the practice of one woman simultaneously marrying multiple men, only occurs in the tropics (though wherever polyandry occurs, polygyny, or one-man-many-wives, also occurs), as do matrilineal societies, which track inheritance and transmission of power through the mother's line. There are no true matriarchal societies, since as I said above, there's no type of foraging humans do that women are strictly better at than men. But tropical societies tend to be much more gender-equal than temperate ones.
 
 #### The Way of the Celestial Lights
 Unfortunately for women, agriculture is much easier and more productive to practice in temperate climates than in tropical ones. Agriculture was invented in the Middle East and quickly spread across the world from there, as even in places where it was difficult, it still produced more calories with less work than foraging. However, the caloric yield per hour of work is much higher in places you don't have to cut down hundreds of trees before you can even till the soil. And soils are way less fertile in the tropics than in temperate regions (here's another good [MinuteEarth video](https://www.youtube.com/watch?v=mWVATekt4ZA) explaining that counterintuitive fact). Therefore, after the invention of agriculture, Animal Powers cultures were able to grow their populations, and their power, much quicker than Seeded Earth ones. Campbell calls Animal Powers cultures that have gone agricultural the Way of the Celestial Lights, because those people had the free time, energy, and ability to stay in one place for enough time to catalog and map the stars, and they began to believe in heavenly deities rather than animal spirits.
