--- a/_posts/2025-03-30-preg.md
+++ b/_posts/2025-03-30-preg.md
@@ -22,7 +22,7 @@ In adolescence, people lose around 17% of their gray matter over a period of abo
 
 During puberty, though, the decrease in gray matter is offset by a corresponding gain in white matter in the same structure or network [2]. Gray matter is composed of neuronal cell bodies, while white matter, the layer located just below the gray matter in the brain, is made up of the long tails that stick off each neuron and connect to others. Myelin sheaths, or the fatty rings that wrap around the long portion of a neuron, which you may have heard of and which famously increase signal speed, are a component of white matter. In light of that, the increased cognitive capabilities associated with puberty make sense: the brain is getting faster and more streamlined.
 
-In contrast, women lose around 5% of their total gray matter from 80% of brain structures during pregnancy--sweeping changes, for sure, but around three times less in magnitude than what happens during normal maturation. But there's no accompanying white matter increase. *During* pregnancy white matter does increase, peaking in the second trimester, but by the time birth rolls around, the white matter is back to pre-pregnancy baseline [3]. The reason for this transient change aren't known, but it seems like it's likely related to the way the brain goes about performing this pruning, since the mechanisms driving brain changes during adolescence and pregnancy are much the same [4]. But the upshot is, at the end of pregnancy women have *less brain* than before, while at the end of puberty adults have a *different but comparably-sized* brain.
+In contrast, women lose around 5% of their total gray matter from 80% of brain structures during pregnancy--sweeping changes, for sure, but around three times less in magnitude than what happens during normal maturation. But there's no accompanying white matter increase. *During* pregnancy white matter does increase, peaking in the second trimester, but by the time birth rolls around, the white matter is back to pre-pregnancy baseline [3]. The reason for this transient change isn't known, but it seems like it's likely related to the way the brain goes about performing this pruning, since the mechanisms driving brain changes during adolescence and pregnancy are much the same [4]. But the upshot is, at the end of pregnancy women have *less brain* than before, while at the end of puberty adults have a *different but comparably-sized* brain.
 
 ![gm-didnt-recover](/assets/images/posts/gm-didnt-recover.png)
 
@@ -52,7 +52,7 @@ There are also myths that mothers are better at picking out their own infants' c
 
 #### This is all *during* pregnancy. What about after?
 
-The good news is, there's a large rebound in gray matter volume immediately after pregnancy--within the first 4-10 weeks. That's a lot of brain growth in a short time! However, it doesn't *all* come back, leaving the mother with an average of 2.5% less gray matter than pre-pregnancy. And doesn't come back the same way.
+The good news is, there's a large rebound in gray matter volume immediately after pregnancy--within the first 4-10 weeks. That's a lot of brain growth in a short time! However, it doesn't *all* come back, leaving the mother with an average of 2.5% less gray matter than pre-pregnancy. And doesn't come back the same way [8].
 
 ![graymatter-time](/assets/images/posts/graymatter-time.webp)
 
@@ -78,7 +78,7 @@ There are silver linings. People who have kids are more resistant to the gray ma
 
 ![6year](/assets/images/posts/6y-study.png)
 
-The fact that this affects both men and women indicates that the mechanism is completely unrelated to everything that happens in pregnancy, but rather is related to childrearing. We'd therefore predict that adoptive parents would enjoy the same benefits. There have been a few studies on the brain chemistry of adoptive parents and how it does become similar to that of birth parents given long enough exposure to the adopted child, I don't know of any studies on whether adoptive mothers' brains undergo the same *structural* changes, nor of any examining adoptive parents' brains later in life.
+The fact that this affects both men and women indicates that the mechanism is completely unrelated to everything that happens in pregnancy, but rather is related to childrearing. We'd therefore predict that adoptive parents would enjoy the same benefits. There have been a few studies on the brain chemistry of adoptive parents and how it does become similar to that of birth parents given long enough exposure to the adopted child, but I don't know of any studies on whether adoptive mothers' brains undergo the same *structural* changes, nor of any examining adoptive parents' brains later in life.
 
 In addition to the benefit of hanging onto more of your brain for longer, parents always report more satisfaction with life and hopefulness about the future than non-parents [17]. This result is repeated again and again in polls--kids are good for your mental health.
 
