adding missing genera

--- a/_posts/2025-03-30-preg.md
+++ b/_posts/2025-03-30-preg.md
@@ -22,7 +22,7 @@ In adolescence, people lose around 17% of their gray matter over a period of abo
 
 During puberty, though, the decrease in gray matter is offset by a corresponding gain in white matter in the same structure or network [2]. Gray matter is composed of neuronal cell bodies, while white matter, the layer located just below the gray matter in the brain, is made up of the long tails that stick off each neuron and connect to others. Myelin sheaths, or the fatty rings that wrap around the long portion of a neuron, which you may have heard of and which famously increase signal speed, are a component of white matter. In light of that, the increased cognitive capabilities associated with puberty make sense: the brain is getting faster and more streamlined.
 
-In contrast, women lose around 5% of their total gray matter from 80% of brain structures during pregnancy--sweeping changes, for sure, but around three times less in magnitude than what happens during normal maturation. But there's no accompanying white matter increase. *During* pregnancy white matter does increase, peaking in the second trimester, but by the time birth rolls around, the white matter is back to pre-pregnancy baseline [3]. The reason for this transient change isn't known, but it seems like it's likely related to the way the brain goes about performing this pruning, since the mechanisms driving brain changes during adolescence and pregnancy are much the same [4]. But the upshot is, at the end of pregnancy women have *less brain* than before, while at the end of puberty adults have a *different but comparably-sized* brain.
+In contrast, women lose around 5% of their total gray matter from 80% of brain structures during pregnancy - sweeping changes, for sure, but around three times less in magnitude than what happens during normal maturation. But there's no accompanying white matter increase. *During* pregnancy white matter does increase, peaking in the second trimester, but by the time birth rolls around, the white matter is back to pre-pregnancy baseline [3]. The reason for this transient change isn't known, but it seems like it's likely related to the way the brain goes about performing this pruning, since the mechanisms driving brain changes during adolescence and pregnancy are much the same [4]. But the upshot is, at the end of pregnancy women have *less brain* than before, while at the end of puberty adults have a *different but comparably-sized* brain.
 
 ![gm-didnt-recover](/assets/images/posts/gm-didnt-recover.png)
 
