--- a/_posts/2025-04-21-permian.md
+++ b/_posts/2025-04-21-permian.md
@@ -68,7 +68,7 @@ Small dicynodonts like the Antarctic *Myosaurus* and *Kombuisia*, as well as the
 
 ![therocephalians](/assets/images/posts/therocephalians.png)
 
-*Muchia*, *Karenites*, *Scaloposaurus*, *Scalopognathus*, *Scalopodontes*, *Scaloporhinus*, *Annatherapsidus*, *Malasaurus*, *Chlynovia*, *Perplexisaurus*, *Ictidosuchus*, *Ictidosuchops*, *Ictidosuchoides*, *Homodontosaurus*, *Lycideops*, *Choerosaurus*, and *Moschorhinus*
+*Muchia*, *Karenites*, *Scaloposaurus*, *Scalopognathus*, *Scalopodontes*, *Scaloporhinus*, *Annatherapsidus*, *Malasaurus*, *Chlynovia*, *Perplexisaurus*, *Ictidosuchus*, *Ictidosuchops*, *Ictidosuchoides*, *Homodontosaurus*, *Lycideops*, *Choerosaurus*, *Promoschorhynchus*, *Tetracynodon*, and *Moschorhinus*
 
 The largest, catch-all grouping on this map, this is likely a **wastebasket taxon** that needs some sorting out. Sometimes Therocephalia is recovered as the **sister group** to Cynodontia (which includes modern mammals), but sometimes Cynodontia is nested inside Therocephalia, making it a **paraphyletic clade**, or an evolutionary "grade" on the road to true mammals. Either way, I'm running with the hypothesis that only dicynodonts and true cynodonts developed endothermy, so my therocephalians are not furry. There's some evidence in the form of **bone histology** (growth patterns in thin slices of bone) that suggest therocephalians like *Moschorhinus* were able to grow faster or slower depending on resource availability, which is a characteristic of ectotherms [3].
 
