fixed page image

--- a/_posts/2025-08-30-dinodays.md
+++ b/_posts/2025-08-30-dinodays.md
@@ -5,7 +5,7 @@ tags: [Dinosauria, Tips]
 date:   2025-08-30 00:01:11 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/pages/sarcosuchus.jpg
+featured_image: /assets/images/pages/apatosaurus-baby.jpeg
 featured: true
 hidden: true
 ---
